--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,4 +9,5 @@ packages:
     emit_prepared_queries: false
     emit_interface: true
     emit_exact_table_names: false
+    emit_empty_slices: true
 
