--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Create .env file
+      run: |
+        echo "${{ secrets.ENV_FILE }}" > app.env
+
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
@@ -47,3 +51,6 @@ jobs:
 
     - name: Test
       run: make test
+
+    - name: Remove .env file
+      run: rm app.env
