--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,19 @@ services:
     ports:
       - "5432:5432"
 
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: bank-go-api
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_SOURCE=postgresql://devuser:admin@db:5432/devdb?sslmode=disable
+    depends_on:
+      - db
+    entrypoint: [ "/app/wait-for.sh", "db:5432", "--", "/app/start.sh" ]
+    command: [ "/app/main" ]
+
 volumes:
   dev-db-data:
