--- a/app.env.sample
+++ b/app.env.sample
@@ -3,3 +3,4 @@ DB_SOURCE=for example (based on docker-compose.yml): postgresql://devuser:admin@
 SERVER_ADDRESS=for example 0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=32 characters, for example 12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=for example 20m
+REFRESH_TOKEN_DURATION=for example 24h
