--- a/app.env.sample
+++ b/app.env.sample
@@ -1,6 +1,7 @@
 DB_DRIVER=postgres
 DB_SOURCE=for example (based on docker-compose.yml): postgresql://devuser:admin@localhost:5432/devdb?sslmode=disable
-SERVER_ADDRESS=for example 0.0.0.0:8080
+HTTP_SERVER_ADDRESS=for example 0.0.0.0:8080
+GRPC_SERVER_ADDRESS=for example 0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=32 characters, for example 12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=for example 20m
 REFRESH_TOKEN_DURATION=for example 24h
