--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,29 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: gin.Dockerfile
     container_name: bank-go-api
     ports:
       - "8080:8080"
     environment:
       - DB_SOURCE=postgresql://devuser:admin@db:5432/devdb?sslmode=disable
+      - SERVER_TYPE=gin
+    depends_on:
+      - db
+    entrypoint: [ "/app/wait-for.sh", "db:5432", "--", "/app/start.sh" ]
+    command: [ "/app/main" ]
+
+  # gRPC
+  gapi:
+    build:
+      context: .
+      dockerfile: grpc.Dockerfile
+    container_name: bank-go-gapi
+    ports:
+      - "9090:9090"
+    environment:
+      - DB_SOURCE=postgresql://devuser:admin@db:5432/devdb?sslmode=disable
+      - SERVER_TYPE=gRPC
     depends_on:
       - db
     entrypoint: [ "/app/wait-for.sh", "db:5432", "--", "/app/start.sh" ]
