--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,20 +29,20 @@ services:
     command: [ "/app/main" ]
 
   # gRPC
-  gapi:
-    build:
-      context: .
-      dockerfile: grpc.Dockerfile
-    container_name: bank-go-gapi
-    ports:
-      - "9090:9090"
-    environment:
-      - DB_SOURCE=postgresql://devuser:admin@db:5432/devdb?sslmode=disable
-      - SERVER_TYPE=gRPC
-    depends_on:
-      - db
-    entrypoint: [ "/app/wait-for.sh", "db:5432", "--", "/app/start.sh" ]
-    command: [ "/app/main" ]
+#  gapi:
+#    build:
+#      context: .
+#      dockerfile: grpc.Dockerfile
+#    container_name: bank-go-gapi
+#    ports:
+#      - "9090:9090"
+#    environment:
+#      - DB_SOURCE=postgresql://devuser:admin@db:5432/devdb?sslmode=disable
+#      - SERVER_TYPE=gRPC
+#    depends_on:
+#      - db
+#    entrypoint: [ "/app/wait-for.sh", "db:5432", "--", "/app/start.sh" ]
+#    command: [ "/app/main" ]
 
 volumes:
   dev-db-data:
